k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pawpal
  labels:
    name: pawpal
    environment: production
